feat: added filter posts and input area for search

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -7,3 +7,12 @@
 .container:nth-child(4) {
     height: 30.5625rem;
 }
+
+@keyframes slideDown {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
