--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,6 +1,14 @@
-.container {
+/* body {
     display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
+/* .root {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-color: white;
-}
+    margin: 0 auto;
+    width: 100%;
+} */
