--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     max-width: 1160px;
+    width: 100%;
     border-color: white;
     padding-bottom: 3rem;
 }
@@ -26,6 +27,19 @@
     padding: 1.4rem 0;
 }
 
+.btn__search {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    color: inherit;
+    font: inherit;
+    line-height: normal;
+    overflow: visible;
+    cursor: pointer;
+    outline: none;
+}
+
 .nav {
     position: sticky;
     top: 0;
@@ -40,7 +54,9 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    padding: 0.4rem 0rem;
+    padding: 0;
+    margin: 0;
+    margin-top: 1.3rem;
     list-style-type: none;
     font-family: Roboto;
     font-size: 16px;
@@ -53,6 +69,8 @@
     position: relative;
     display: flex;
     gap: 0.25rem;
+    margin: 0;
+    height: 2.35rem;
 }
 
 .nav__item::after {
@@ -63,7 +81,9 @@
     cursor: pointer;
 }
 
-.nav__item:hover .submenu {
+.nav__item:hover .submenu,
+.submenu__item:hover .submenu,
+.submenu:hover {
     display: flex;
 }
 
@@ -72,10 +92,12 @@
     flex-direction: column;
     position: absolute;
     top: 2.5rem;
-    padding: 0.8125rem 1.2rem;
+    padding: 0.8rem 1.2rem;
     background-color: white;
     border: 0.0625rem solid #e9e9e9;
     gap: 0.5rem;
+    z-index: 5;
+    width: 176px;
 }
 
 .submenu__item {
@@ -83,10 +105,17 @@
     justify-content: space-between;
     white-space: nowrap;
     width: 8.5rem;
+    padding-bottom: 0.5rem;
     border-bottom: 0.0625rem solid #e9e9e9;
     font-weight: 400;
-    font-size: 0.8125rem;
-    line-height: 1.3125rem;
+    font-size: 13px;
+    line-height: 13px;
+}
+
+.submenu__item:hover {
+    margin-left: 0.5rem;
+    cursor: pointer;
+    color: #969696;
 }
 
 .submenu__item::after {
