--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,18 +1,93 @@
-.container {
+.post {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     width: 22.5rem;
     height: 28.6875rem;
-    background-color: aqua;
+    z-index: -1;
 }
 
-.container:nth-child(4) {
+.post:nth-child(4) {
     height: 30.5625rem;
 }
 
-@keyframes slideDown {
-    from {
-        transform: translateY(-100%);
-    }
-    to {
-        transform: translateY(0);
-    }
+.post__img {
+    width: 100%;
+    height: auto;
+}
+
+.post__content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.post__tags {
+    color: #eb0028;
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 13px;
+}
+
+.post__title {
+    margin: 0;
+    margin-top: -0.0625rem;
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+}
+
+.post__meta {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 12px;
+}
+
+.post__author {
+    position: relative;
+    padding: 0 3px 0 0;
+}
+
+.post__author:not(:last-child)::before {
+    content: "";
+    position: absolute;
+    width: 0.1875rem;
+    height: 0.8755rem;
+    border-radius: 50%;
+    background-color: #d7d7d7;
+    top: 50%;
+    transform: translateY(-50%);
+    right: -0.18755rem;
+}
+
+.post__date {
+    color: #9b9b9b;
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 12px;
+}
+
+.post__views {
+    color: #9b9b9b;
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 12px;
+}
+
+.post__description {
+    margin: 0;
+    margin-left: -0.0625rem;
+    color: #929292;
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
 }
