--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -6,13 +7,14 @@
     justify-content: center;
     max-width: 1160px;
     width: 100%;
+    height: auto;
     border-color: white;
     padding-bottom: 3rem;
 }
 
 .header {
+    position: relative;
     margin: 0 auto;
-    /* position: relative; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -43,10 +45,28 @@
 .nav {
     position: sticky;
     top: 0;
-    width: 100%;
-    border-top: 0.0625rem solid #e9e9e9;
-    border-bottom: 0.0625rem solid #e9e9e9;
-    margin-right: -0.7rem;
+    /* margin-right: -0.7rem; */
+    z-index: 100;
+}
+
+.nav::before {
+    content: "";
+    position: absolute;
+    /* bottom: 0; */
+    left: -300%;
+    width: 1000%;
+    height: 1px;
+    background-color: #e9e9e9;
+}
+
+.nav::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -300%;
+    width: 1000%;
+    height: 1px;
+    background-color: #e9e9e9;
 }
 
 .nav__list {
@@ -91,20 +111,20 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 2.5rem;
-    padding: 0.8rem 1.2rem;
+    top: 2.25rem;
+    padding: 1.4rem 1.2rem 0.6rem 1.2rem;
     background-color: white;
     border: 0.0625rem solid #e9e9e9;
     gap: 0.5rem;
     z-index: 5;
-    width: 176px;
+    /* width: 176px; */
 }
 
 .submenu__item {
     display: flex;
     justify-content: space-between;
     white-space: nowrap;
-    width: 8.5rem;
+    width: 135px;
     padding-bottom: 0.5rem;
     border-bottom: 0.0625rem solid #e9e9e9;
     font-weight: 400;
@@ -113,6 +133,7 @@
 }
 
 .submenu__item:hover {
+    width: 127px;
     margin-left: 0.5rem;
     cursor: pointer;
     color: #969696;
@@ -123,6 +144,25 @@
 }
 
 /* Laptop */
+
+@media (max-width: 768px) {
+    .container {
+        padding: 0rem 0.75em;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .logo {
+        padding: 1.6rem 0;
+        z-index: 2;
+    }
+
+    .btn__search {
+        margin-right: 1.25rem;
+    }
+}
 
 /* Animation */
 
