--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -91,3 +91,15 @@
     font-size: 14px;
     line-height: 20px;
 }
+
+@media (max-width: 768px) {
+    .post {
+        justify-content: center;
+        align-items: center;
+        width: 335px;
+    }
+
+    .post__img {
+        height: 230px;
+    }
+}
