--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -3,19 +3,14 @@
     margin-right: auto;
     margin: 0;
     z-index: 1;
-    color: #000;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px;
 }
 
 .burgerIcon {
+    position: relative;
+    top: -0.2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     width: 25px;
     height: 20px;
     cursor: pointer;
@@ -26,16 +21,13 @@
     width: 100%;
     height: 3px;
     background-color: #000000;
+    border-radius: 2rem;
     z-index: 1;
 }
 
 .burgerLineActive {
     position: relative;
-    width: 100%;
-    top: 0;
     right: -70vw;
-    background-color: #000000;
-    transform-origin: center;
     transition: transform 0.6s ease, right 0.6s ease;
     z-index: 2;
     animation: slideRight 0.6s ease;
@@ -94,9 +86,7 @@
     left: -180vw;
     width: 80vw;
     height: 100vh;
-    list-style: none;
     padding-top: 2rem;
-    padding-left: 1.25rem;
     margin: 0;
     transition: left 0.6s ease;
     background-color: white;
@@ -166,6 +156,12 @@
 @media (max-width: 768px) {
     .navigation {
         visibility: visible;
+    }
+}
+
+@media (max-width: 455px) {
+    .navigation {
+        padding-left: 1.25rem;
     }
 }
 
