--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,26 +1,15 @@
 .container {
-    position: relative;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     max-width: 1160px;
-    width: 100%;
-    height: auto;
-    border-color: white;
 }
 
 .header {
-    position: relative;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
     font-family: Roboto;
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 1rem;
+    line-height: 1rem;
     font-weight: 500;
 }
 
@@ -31,122 +20,17 @@
 
 .btn__search {
     padding: 0;
-    margin: 0;
     border: none;
     background: none;
-    color: inherit;
-    font: inherit;
-    line-height: normal;
     overflow: visible;
     cursor: pointer;
-    outline: none;
-}
-
-.nav {
-    position: sticky;
-    top: 0;
-    /* margin-right: -0.7rem; */
-    z-index: 100;
-}
-
-.nav::before {
-    content: "";
-    position: absolute;
-    /* bottom: 0; */
-    left: -300%;
-    width: 1000%;
-    height: 1px;
-    background-color: #e9e9e9;
-}
-
-.nav::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: -300%;
-    width: 1000%;
-    height: 1px;
-    background-color: #e9e9e9;
-}
-
-.nav__list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    padding: 0;
-    margin: 0;
-    margin-top: 1.3rem;
-    list-style-type: none;
-    font-family: Roboto;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 500;
-    width: 100%;
-}
-
-.nav__item {
-    position: relative;
-    display: flex;
-    gap: 0.25rem;
-    margin: 0;
-    height: 2.35rem;
-}
-
-.nav__item::after {
-    content: url("../../source/img/path.png");
-}
-
-.nav__item:hover {
-    cursor: pointer;
-}
-
-.nav__item:hover .submenu,
-.submenu__item:hover .submenu,
-.submenu:hover {
-    display: flex;
-}
-
-.submenu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 2.25rem;
-    padding: 1.4rem 1.2rem 0.6rem 1.2rem;
-    background-color: white;
-    border: 0.0625rem solid #e9e9e9;
-    gap: 0.5rem;
-    z-index: 5;
-}
-
-.submenu__item {
-    display: flex;
-    justify-content: space-between;
-    white-space: nowrap;
-    width: 135px;
-    padding-bottom: 0.5rem;
-    border-bottom: 0.0625rem solid #e9e9e9;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 13px;
-}
-
-.submenu__item:hover {
-    width: 127px;
-    margin-left: 0.5rem;
-    cursor: pointer;
-    color: #969696;
-}
-
-.submenu__item::after {
-    content: url("../../source/img/pathLeft.png");
 }
 
 /* Laptop */
 
 @media (max-width: 768px) {
     .container {
-        padding: 0rem 0.5em;
+        padding: 0rem 0.75rem;
     }
 
     .nav {
@@ -156,10 +40,6 @@
     .logo {
         padding: 1.6rem 0;
         z-index: 2;
-    }
-
-    .btn__search {
-        margin-right: 1.25rem;
     }
 }
 
