--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,9 +1,7 @@
 .nav__list {
     position: sticky;
     top: 0;
-    z-index: 1;
     display: flex;
-    align-items: center;
     justify-content: center;
     gap: 2rem;
     padding: 1rem 0 0 0;
@@ -11,14 +9,10 @@
     border-top: 2px solid #e9e9e9;
     border-bottom: 2px solid #e9e9e9;
     background-color: white;
-    list-style-type: none;
-    font-family: Roboto;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 500;
     opacity: 1;
     visibility: visible;
     transition: opacity 0.6s ease, visibility 0.6s ease;
+    z-index: 1;
 }
 
 .hidden {
@@ -29,9 +23,7 @@
 .nav__item {
     position: relative;
     display: flex;
-    justify-content: center;
     gap: 0.25rem;
-    margin: 0;
     height: 2.35rem;
 }
 
@@ -54,7 +46,7 @@
     flex-direction: column;
     position: absolute;
     left: 0;
-    top: 2.5rem;
+    top: 2.4rem;
     padding: 1.25rem 1.2rem 0.5rem 1.2rem;
     background-color: white;
     border: 0.0625rem solid #e9e9e9;
@@ -64,13 +56,12 @@
 .submenu__item {
     display: flex;
     justify-content: space-between;
-    white-space: nowrap;
     width: 135px;
     padding-bottom: 0.5rem;
     border-bottom: 0.0625rem solid #e9e9e9;
     font-weight: 400;
-    font-size: 13px;
-    line-height: 13px;
+    font-size: 0.8125rem;
+    line-height: 0.8125rem;
 }
 
 .submenu__item:hover {
