--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -4,7 +4,7 @@
     gap: 1rem;
     width: 22.5rem;
     height: 28.6875rem;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .post:nth-child(4) {
@@ -26,8 +26,8 @@
     color: #eb0028;
     font-family: Roboto;
     font-weight: 700;
-    font-size: 13px;
-    line-height: 13px;
+    font-size: 0.8125rem;
+    line-height: 0.8125rem;
 }
 
 .post__title {
@@ -35,8 +35,8 @@
     margin-top: -0.0625rem;
     font-family: Roboto;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 1.5rem;
+    line-height: 1.875rem;
 }
 
 .post__meta {
@@ -45,41 +45,40 @@
     gap: 0.5rem;
     font-family: Roboto;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 12px;
+    font-size: 0.75rem;
+    line-height: 0.75rem;
 }
 
 .post__author {
     position: relative;
-    padding: 0 3px 0 0;
 }
 
 .post__author:not(:last-child)::before {
     content: "";
     position: absolute;
     width: 0.1875rem;
-    height: 0.8755rem;
+    height: 0.1875rem;
     border-radius: 50%;
     background-color: #d7d7d7;
     top: 50%;
     transform: translateY(-50%);
-    right: -0.18755rem;
+    right: -0.3175rem;
 }
 
 .post__date {
     color: #9b9b9b;
     font-family: Roboto;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 12px;
+    font-size: 0.75rem;
+    line-height: 0.75rem;
 }
 
 .post__views {
     color: #9b9b9b;
     font-family: Roboto;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 12px;
+    font-size: 0.75rem;
+    line-height: 0.75rem;
 }
 
 .post__description {
@@ -88,15 +87,14 @@
     color: #929292;
     font-family: Roboto;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
 }
 
 @media (max-width: 768px) {
     .post {
         justify-content: center;
         align-items: center;
-        /* width: 335px; */
     }
 
     .post__img {
