--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -7,8 +7,8 @@
     width: 100%;
     border-color: rgb(0, 0, 0);
     font-family: Roboto;
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 1rem;
+    line-height: 1rem;
     font-weight: 500;
 }
 
@@ -26,7 +26,6 @@
     flex-wrap: wrap;
     column-gap: 2rem;
     row-gap: 3rem;
-    z-index: -1;
 }
 
 /* Laptop */
