--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -14,10 +14,10 @@
 
 .input {
     position: absolute;
-    top: -3.5vh;
+    top: -2rem;
     font-size: 1rem;
     border-radius: 1rem;
-    z-index: 10;
+    z-index: 0;
 }
 
 .posts {
@@ -45,6 +45,10 @@
 
     .posts {
         row-gap: 1rem;
+    }
+
+    .input {
+        top: -1.25rem;
     }
 }
 
