--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0;
     font-family: Roboto;
     font-size: 1rem;
     line-height: 1rem;
@@ -14,8 +15,7 @@
 }
 
 .logo {
-    padding: 1.4rem 0;
-    padding-bottom: 1.5rem;
+    padding: 1.3rem 0 1.45rem 0;
 }
 
 .btn__search {
@@ -28,8 +28,15 @@
 
 /* Laptop */
 
+@media (max-width: 1440px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
 @media (max-width: 768px) {
     .container {
+        max-width: 360px;
         padding: 0rem 0.75rem;
     }
 
@@ -40,6 +47,12 @@
     .logo {
         padding: 1.6rem 0;
         z-index: 2;
+    }
+}
+
+@media (max-width: 660px) {
+    .container {
+        max-width: 335px;
     }
 }
 
