--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -4,10 +4,10 @@
     display: flex;
     justify-content: center;
     gap: 2rem;
-    padding: 1rem 0 0 0;
-    margin: 0 0 3rem 0.5rem;
-    border-top: 2px solid #e9e9e9;
-    border-bottom: 2px solid #e9e9e9;
+    padding: 1.3rem 0 0 0;
+    margin: 0rem 0 3rem 0.7rem;
+    border-top: 1px solid #e9e9e9;
+    border-bottom: 1px solid #e9e9e9;
     background-color: white;
     opacity: 1;
     visibility: visible;
@@ -24,10 +24,11 @@
     position: relative;
     display: flex;
     gap: 0.25rem;
-    height: 2.35rem;
+    height: 2.25rem;
 }
 
 .nav__item::after {
+    margin-top: -0.05rem;
     content: url("../../source/img/path.png");
 }
 
@@ -46,8 +47,8 @@
     flex-direction: column;
     position: absolute;
     left: 0;
-    top: 2.4rem;
-    padding: 1.25rem 1.2rem 0.5rem 1.2rem;
+    top: 2.25rem;
+    padding: 1.2rem 1.2rem 0.6rem 1.25rem;
     background-color: white;
     border: 0.0625rem solid #e9e9e9;
     gap: 0.5rem;
