--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     max-width: 1160px;
     width: 100%;
+    padding-bottom: 10rem;
     border-color: rgb(0, 0, 0);
     font-family: Roboto;
     font-size: 1rem;
@@ -14,7 +15,7 @@
 
 .input {
     position: absolute;
-    top: -2rem;
+    top: -2.5rem;
     font-size: 1rem;
     border-radius: 1rem;
     z-index: 0;
@@ -22,20 +23,13 @@
 
 .posts {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     column-gap: 2rem;
     row-gap: 3rem;
 }
 
 /* Laptop */
-
-@media (max-width: 1440px) {
-    .posts {
-        justify-content: center;
-        column-gap: 3rem;
-    }
-}
 
 @media (max-width: 768px) {
     .container {
@@ -48,7 +42,7 @@
     }
 
     .input {
-        top: -1.25rem;
+        top: -1.5rem;
     }
 }
 
