--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,11 +19,22 @@
 }
 
 .btn__search {
+    position: relative;
     padding: 0;
     border: none;
     background: none;
     overflow: visible;
     cursor: pointer;
+}
+
+.message {
+    position: absolute;
+    top: -0, 5rem;
+    left: -9rem;
+    font-family: Roboto;
+    font-size: 1rem;
+    line-height: 1rem;
+    font-weight: 500;
 }
 
 /* Laptop */
