fix: fixed styles

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -19,6 +19,7 @@
 
 .post__tags {
     margin-top: -0.0725rem;
+    margin-bottom: 0.0725rem;
     color: #eb0028;
     font-family: Roboto;
     font-weight: 700;
