--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: space-between;
     margin: 0;
+    margin-left: -0.25rem;
     font-family: Roboto;
     font-size: 1rem;
     line-height: 1rem;
